--- a/r5dev/vproj/pluginsdk.vcxproj
+++ b/r5dev/vproj/pluginsdk.vcxproj
@@ -123,6 +123,7 @@
       <OmitFramePointers>false</OmitFramePointers>
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
