--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -342,6 +342,7 @@
     <ClInclude Include="..\public\inetchannel.h" />
     <ClInclude Include="..\public\inetmessage.h" />
     <ClInclude Include="..\public\inetmsghandler.h" />
+    <ClInclude Include="..\public\interface.h" />
     <ClInclude Include="..\public\ipackedstore.h" />
     <ClInclude Include="..\public\isnapshotmgr.h" />
     <ClInclude Include="..\public\isurfacesystem.h" />
