--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -336,6 +336,7 @@
     <ClInclude Include="..\public\inetchannel.h" />
     <ClInclude Include="..\public\inetmessage.h" />
     <ClInclude Include="..\public\inetmsghandler.h" />
+    <ClInclude Include="..\public\interface.h" />
     <ClInclude Include="..\public\ipackedstore.h" />
     <ClInclude Include="..\public\iserver.h" />
     <ClInclude Include="..\public\iserverentity.h" />
